@@ -6,6 +6,7 @@ Changes in version 0.6-8 (2016-03-09)
   o Added varOrder() for effect ordering in MLMs
   o plot.candisc() gets a var.labels argument
   o added method="colmean" and descending=T/F to varOrder()
+  o plot.candisc() gets a rev.axes argument
 
 Changes in version 0.6-7 (2015-04-15)
 
